tests/vertical-slice/reject/gen_capture_whole_value_escape.hew
gen fn values(items: Vec<i64>) -> Vec<i64> {
    yield items;
}

fn main() {
    let items: Vec<i64> = Vec::new();
    let _g = values(items);
}
